--- a/graal2.html
+++ b/graal2.html
@@ -9,13 +9,13 @@
 </head>
 <body>
   <div class="container">
-    <div class="header">This is the header of a Holy Grail Layout.</div>
-    <div class="menu">This is the menu.</div>
-    <div class="main">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus tempus nibh a condimentum gravida. Donec accumsan ipsum ac tincidunt scelerisque. Integer maximus malesuada vulputate. Mauris cursus enim nec vulputate rhoncus. Fusce eu dignissim enim. Phasellus dictum varius justo a accumsan. Donec bibendum varius pretium. Suspendisse aliquam vulputate lorem eu fermentum. Sed blandit porttitor ex ut laoreet. Nulla laoreet velit sed dolor feugiat, ut condimentum felis tincidunt. Donec pretium est eget neque ultricies, eu vehicula felis condimentum. Aenean bibendum eu felis nec tincidunt. Aenean scelerisque dictum sollicitudin. Sed lacinia ullamcorper velit, id volutpat nunc vestibulum sed.
+    <div class="header"><header>This is the header of a Holy Grail Layout.</header></div>
+    <div class="menu"><nav>This is the menu.</nav></div>
+    <div class="main"><main>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus tempus nibh a condimentum gravida. Donec accumsan ipsum ac tincidunt scelerisque. Integer maximus malesuada vulputate. Mauris cursus enim nec vulputate rhoncus. Fusce eu dignissim enim. Phasellus dictum varius justo a accumsan. Donec bibendum varius pretium. Suspendisse aliquam vulputate lorem eu fermentum. Sed blandit porttitor ex ut laoreet. Nulla laoreet velit sed dolor feugiat, ut condimentum felis tincidunt. Donec pretium est eget neque ultricies, eu vehicula felis condimentum. Aenean bibendum eu felis nec tincidunt. Aenean scelerisque dictum sollicitudin. Sed lacinia ullamcorper velit, id volutpat nunc vestibulum sed.</main>
 
 </div>
-    <div class="sidebar">This is the sidebar.</div>
-    <div class="footer">This is the footer.</div>
+    <div class="sidebar"><aside>This is the sidebar.</aside></div>
+    <div class="footer"><footer>This is the footer.</footer></div>
   </div>
 </body>
 </html>
